--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.BetterHealthApp"
         tools:targetApi="31">
         <activity
+            android:name=".admin.Admin_Dashboard_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".doctor.Doctor_Dashboard_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".paramedic.Paramedic_Dashboard_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".student.Student_Dashboard_Activity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
