--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.BetterHealthApp"
         tools:targetApi="31">
         <activity
+            android:name=".Sign_In_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Common_Info_SignUP_Activity"
+            android:exported="false" />
+        <activity
             android:name=".admin.Admin_Dashboard_Activity"
             android:exported="false" />
         <activity
