--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,17 +13,20 @@
         android:theme="@style/Theme.BetterHealthApp"
         tools:targetApi="31">
         <activity
+            android:name=".User_Type_Picker_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Sign_In_Activity"
             android:exported="false" />
         <activity
             android:name=".Common_Info_SignUP_Activity"
-            android:exported="false" />
-        <!-- MainActivity should not be exported -->
+            android:exported="false" /> <!-- MainActivity should not be exported -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
