--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.BetterHealthApp"
         tools:targetApi="31">
         <activity
+            android:name=".Paramedic_Sign_Up_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Doctor_Sign_Up_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_Sign_In_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Student_Sign_Up_Activity"
+            android:exported="false" />
+        <activity
             android:name=".User_Type_Picker_Activity"
             android:exported="false" />
         <activity
