Added a Student Dashboard
It has no functionality yet, but a pretty face tho.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BetterHealthApp"
         tools:targetApi="31">
         <activity
+            android:name=".StudentDashboardActivity"
+            android:exported="false" />
+        <activity
             android:name=".Paramedic_Sign_Up_Activity"
             android:exported="false" />
         <activity
